test(business): extend Business aggregate tests (sprint C, C1)
BusinessExtendedTest: 19 tests filling gaps not covered by BusinessTest —
create-validation edge cases, all transition paths (approve→suspend→
reactivate plus illegal transitions), updateProfile change tracking,
restore rebuild.

fix(business): BusinessUpdatedEvent.changes accepts nullable values

Same bug pattern as AdTariffUpdatedEvent: Map.copyOf() NPEs on null
values; updateProfile legitimately passes null (e.g. blanked description).
Switched to Collections.unmodifiableMap(new HashMap<>(...)).

Total new tests: +19 (runs: 666 → 685 passing).